SMGR1/src/main/java/SMT_GR1/SMT_GR1Parser.java
// Generated from C:/Users/kokaze/IdeaProjects/SMGR1/src/main/resources/SMT_GR1.g4 by ANTLR 4.13.1
package SMT_GR1;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SMT_GR1Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, TYPE=14, KIND=15, INT=16, FLOAT=17, 
		PLUS=18, MINUS=19, MUL=20, DIV=21, SQUARE=22, LT=23, GT=24, LTE=25, GTE=26, 
		EQ=27, NEQ=28, AND=29, OR=30, IMPL=31, EQUIV=32, NOT=33, NEXT=34, TRUE=35, 
		FALSE=36, LPAREN=37, RPAREN=38, NAME=39, ID=40, WS=41;
	public static final int
		RULE_spec = 0, RULE_importState = 1, RULE_specName = 2, RULE_specElem = 3, 
		RULE_varDec = 4, RULE_assumption = 5, RULE_guarantee = 6, RULE_pattern = 7, 
		RULE_tempConstraint = 8, RULE_exp = 9, RULE_unaryOp = 10, RULE_binaryOp = 11, 
		RULE_primExp = 12, RULE_arithmeticComparison = 13, RULE_subexp = 14, RULE_predicate = 15, 
		RULE_value = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"spec", "importState", "specName", "specElem", "varDec", "assumption", 
			"guarantee", "pattern", "tempConstraint", "exp", "unaryOp", "binaryOp", 
			"primExp", "arithmeticComparison", "subexp", "predicate", "value"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'import'", "'\"'", "'.'", "'spec'", "';'", "'{'", "','", "'}'", 
			"'asm'", "'gar'", "'ini'", "'alw'", "'alwEv'", null, null, null, null, 
			"'+'", "'-'", "'*'", "'/'", "'**'", "'<'", "'>'", "'<='", "'>='", "'='", 
			"'!='", "'&'", "'|'", "'->'", "'<->'", "'!'", "'next'", "'true'", "'false'", 
			"'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "TYPE", "KIND", "INT", "FLOAT", "PLUS", "MINUS", "MUL", "DIV", 
			"SQUARE", "LT", "GT", "LTE", "GTE", "EQ", "NEQ", "AND", "OR", "IMPL", 
			"EQUIV", "NOT", "NEXT", "TRUE", "FALSE", "LPAREN", "RPAREN", "NAME", 
			"ID", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SMT_GR1.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SMT_GR1Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SpecContext extends ParserRuleContext {
		public SpecNameContext specName() {
			return getRuleContext(SpecNameContext.class,0);
		}
		public List<ImportStateContext> importState() {
			return getRuleContexts(ImportStateContext.class);
		}
		public ImportStateContext importState(int i) {
			return getRuleContext(ImportStateContext.class,i);
		}
		public List<SpecElemContext> specElem() {
			return getRuleContexts(SpecElemContext.class);
		}
		public SpecElemContext specElem(int i) {
			return getRuleContext(SpecElemContext.class,i);
		}
		public SpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_spec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_GR1Listener ) ((SMT_GR1Listener)listener).enterSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_GR1Listener ) ((SMT_GR1Listener)listener).exitSpec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMT_GR1Visitor ) return ((SMT_GR1Visitor<? extends T>)visitor).visitSpec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SpecContext spec() throws RecognitionException {
		SpecContext _localctx = new SpecContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_spec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(34);
				importState();
				}
				}
				setState(39);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(40);
			specName();
			setState(44);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 34304L) != 0)) {
				{
				{
				setState(41);
				specElem();
				}
				}
				setState(46);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStateContext extends ParserRuleContext {
		public List<TerminalNode> NAME() { return getTokens(SMT_GR1Parser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(SMT_GR1Parser.NAME, i);
		}
		public ImportStateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importState; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_GR1Listener ) ((SMT_GR1Listener)listener).enterImportState(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_GR1Listener ) ((SMT_GR1Listener)listener).exitImportState(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMT_GR1Visitor ) return ((SMT_GR1Visitor<? extends T>)visitor).visitImportState(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStateContext importState() throws RecognitionException {
		ImportStateContext _localctx = new ImportStateContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importState);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			match(T__0);
			setState(48);
			match(T__1);
			setState(49);
			match(NAME);
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(50);
				match(T__2);
				setState(51);
				match(NAME);
				}
				}
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(57);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SpecNameContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(SMT_GR1Parser.NAME, 0); }
		public SpecNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_specName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_GR1Listener ) ((SMT_GR1Listener)listener).enterSpecName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_GR1Listener ) ((SMT_GR1Listener)listener).exitSpecName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMT_GR1Visitor ) return ((SMT_GR1Visitor<? extends T>)visitor).visitSpecName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SpecNameContext specName() throws RecognitionException {
		SpecNameContext _localctx = new SpecNameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_specName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			match(T__3);
			setState(60);
			match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SpecElemContext extends ParserRuleContext {
		public VarDecContext varDec() {
			return getRuleContext(VarDecContext.class,0);
		}
		public AssumptionContext assumption() {
			return getRuleContext(AssumptionContext.class,0);
		}
		public GuaranteeContext guarantee() {
			return getRuleContext(GuaranteeContext.class,0);
		}
		public SpecElemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_specElem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_GR1Listener ) ((SMT_GR1Listener)listener).enterSpecElem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_GR1Listener ) ((SMT_GR1Listener)listener).exitSpecElem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMT_GR1Visitor ) return ((SMT_GR1Visitor<? extends T>)visitor).visitSpecElem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SpecElemContext specElem() throws RecognitionException {
		SpecElemContext _localctx = new SpecElemContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_specElem);
		try {
			setState(71);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KIND:
				enterOuterAlt(_localctx, 1);
				{
				setState(62);
				varDec();
				setState(63);
				match(T__4);
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(65);
				assumption();
				setState(66);
				match(T__4);
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 3);
				{
				setState(68);
				guarantee();
				setState(69);
				match(T__4);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarDecContext extends ParserRuleContext {
		public VarDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDec; }
	 
		public VarDecContext() { }
		public void copyFrom(VarDecContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class EnumDecContext extends VarDecContext {
		public Token enumName;
		public TerminalNode KIND() { return getToken(SMT_GR1Parser.KIND, 0); }
		public List<TerminalNode> NAME() { return getTokens(SMT_GR1Parser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(SMT_GR1Parser.NAME, i);
		}
		public EnumDecContext(VarDecContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_GR1Listener ) ((SMT_GR1Listener)listener).enterEnumDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_GR1Listener ) ((SMT_GR1Listener)listener).exitEnumDec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMT_GR1Visitor ) return ((SMT_GR1Visitor<? extends T>)visitor).visitEnumDec(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DecWithoutEnumContext extends VarDecContext {
		public TerminalNode KIND() { return getToken(SMT_GR1Parser.KIND, 0); }
		public TerminalNode TYPE() { return getToken(SMT_GR1Parser.TYPE, 0); }
		public TerminalNode NAME() { return getToken(SMT_GR1Parser.NAME, 0); }
		public DecWithoutEnumContext(VarDecContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_GR1Listener ) ((SMT_GR1Listener)listener).enterDecWithoutEnum(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_GR1Listener ) ((SMT_GR1Listener)listener).exitDecWithoutEnum(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMT_GR1Visitor ) return ((SMT_GR1Visitor<? extends T>)visitor).visitDecWithoutEnum(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDecContext varDec() throws RecognitionException {
		VarDecContext _localctx = new VarDecContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_varDec);
		try {
			int _alt;
			setState(88);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new DecWithoutEnumContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				match(KIND);
				setState(74);
				match(TYPE);
				setState(75);
				match(NAME);
				}
				break;
			case 2:
				_localctx = new EnumDecContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(76);
				match(KIND);
				setState(77);
				match(T__5);
				setState(82);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(78);
						match(NAME);
						setState(79);
						match(T__6);
						}
						} 
					}
					setState(84);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				}
				setState(85);
				match(NAME);
				setState(86);
				match(T__7);
				setState(87);
				((EnumDecContext)_localctx).enumName = match(NAME);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssumptionContext extends ParserRuleContext {
		public AssumptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assumption; }
	 
		public AssumptionContext() { }
		public void copyFrom(AssumptionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AsmPatternContext extends AssumptionContext {
		public PatternContext pattern() {
			return getRuleContext(PatternContext.class,0);
		}
		public AsmPatternContext(AssumptionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_GR1Listener ) ((SMT_GR1Listener)listener).enterAsmPattern(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_GR1Listener ) ((SMT_GR1Listener)listener).exitAsmPattern(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMT_GR1Visitor ) return ((SMT_GR1Visitor<? extends T>)visitor).visitAsmPattern(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AsmTempConstraintContext extends AssumptionContext {
		public TempConstraintContext tempConstraint() {
			return getRuleContext(TempConstraintContext.class,0);
		}
		public AsmTempConstraintContext(AssumptionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_GR1Listener ) ((SMT_GR1Listener)listener).enterAsmTempConstraint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_GR1Listener ) ((SMT_GR1Listener)listener).exitAsmTempConstraint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMT_GR1Visitor ) return ((SMT_GR1Visitor<? extends T>)visitor).visitAsmTempConstraint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssumptionContext assumption() throws RecognitionException {
		AssumptionContext _localctx = new AssumptionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assumption);
		try {
			setState(94);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new AsmTempConstraintContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(90);
				match(T__8);
				setState(91);
				tempConstraint();
				}
				break;
			case 2:
				_localctx = new AsmPatternContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(92);
				match(T__8);
				setState(93);
				pattern();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GuaranteeContext extends ParserRuleContext {
		public GuaranteeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_guarantee; }
	 
		public GuaranteeContext() { }
		public void copyFrom(GuaranteeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GatPatternContext extends GuaranteeContext {
		public PatternContext pattern() {
			return getRuleContext(PatternContext.class,0);
		}
		public GatPatternContext(GuaranteeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_GR1Listener ) ((SMT_GR1Listener)listener).enterGatPattern(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_GR1Listener ) ((SMT_GR1Listener)listener).exitGatPattern(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMT_GR1Visitor ) return ((SMT_GR1Visitor<? extends T>)visitor).visitGatPattern(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GarTempConstraintContext extends GuaranteeContext {
		public TempConstraintContext tempConstraint() {
			return getRuleContext(TempConstraintContext.class,0);
		}
		public GarTempConstraintContext(GuaranteeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_GR1Listener ) ((SMT_GR1Listener)listener).enterGarTempConstraint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_GR1Listener ) ((SMT_GR1Listener)listener).exitGarTempConstraint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMT_GR1Visitor ) return ((SMT_GR1Visitor<? extends T>)visitor).visitGarTempConstraint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GuaranteeContext guarantee() throws RecognitionException {
		GuaranteeContext _localctx = new GuaranteeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_guarantee);
		try {
			setState(100);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				_localctx = new GarTempConstraintContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				match(T__9);
				setState(97);
				tempConstraint();
				}
				break;
			case 2:
				_localctx = new GatPatternContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				match(T__9);
				setState(99);
				pattern();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PatternContext extends ParserRuleContext {
		public List<TerminalNode> NAME() { return getTokens(SMT_GR1Parser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(SMT_GR1Parser.NAME, i);
		}
		public TerminalNode LPAREN() { return getToken(SMT_GR1Parser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(SMT_GR1Parser.RPAREN, 0); }
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public PatternContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pattern; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_GR1Listener ) ((SMT_GR1Listener)listener).enterPattern(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_GR1Listener ) ((SMT_GR1Listener)listener).exitPattern(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMT_GR1Visitor ) return ((SMT_GR1Visitor<? extends T>)visitor).visitPattern(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PatternContext pattern() throws RecognitionException {
		PatternContext _localctx = new PatternContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_pattern);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(NAME);
			setState(103);
			match(LPAREN);
			setState(111);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(106);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
					case 1:
						{
						setState(104);
						match(NAME);
						}
						break;
					case 2:
						{
						setState(105);
						exp(0);
						}
						break;
					}
					setState(108);
					match(T__6);
					}
					} 
				}
				setState(113);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			setState(116);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(114);
				match(NAME);
				}
				break;
			case 2:
				{
				setState(115);
				exp(0);
				}
				break;
			}
			setState(118);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TempConstraintContext extends ParserRuleContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TempConstraintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tempConstraint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_GR1Listener ) ((SMT_GR1Listener)listener).enterTempConstraint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_GR1Listener ) ((SMT_GR1Listener)listener).exitTempConstraint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMT_GR1Visitor ) return ((SMT_GR1Visitor<? extends T>)visitor).visitTempConstraint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TempConstraintContext tempConstraint() throws RecognitionException {
		TempConstraintContext _localctx = new TempConstraintContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_tempConstraint);
		try {
			setState(126);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__10:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				match(T__10);
				setState(121);
				exp(0);
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				match(T__11);
				setState(123);
				exp(0);
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 3);
				{
				setState(124);
				match(T__12);
				setState(125);
				exp(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpContext extends ParserRuleContext {
		public ArithmeticComparisonContext arithmeticComparison() {
			return getRuleContext(ArithmeticComparisonContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(SMT_GR1Parser.LPAREN, 0); }
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(SMT_GR1Parser.RPAREN, 0); }
		public UnaryOpContext unaryOp() {
			return getRuleContext(UnaryOpContext.class,0);
		}
		public PrimExpContext primExp() {
			return getRuleContext(PrimExpContext.class,0);
		}
		public BinaryOpContext binaryOp() {
			return getRuleContext(BinaryOpContext.class,0);
		}
		public ExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_GR1Listener ) ((SMT_GR1Listener)listener).enterExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_GR1Listener ) ((SMT_GR1Listener)listener).exitExp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMT_GR1Visitor ) return ((SMT_GR1Visitor<? extends T>)visitor).visitExp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpContext exp() throws RecognitionException {
		return exp(0);
	}

	private ExpContext exp(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpContext _localctx = new ExpContext(_ctx, _parentState);
		ExpContext _prevctx = _localctx;
		int _startState = 18;
		enterRecursionRule(_localctx, 18, RULE_exp, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				{
				setState(129);
				arithmeticComparison();
				}
				break;
			case 2:
				{
				setState(130);
				match(LPAREN);
				setState(131);
				exp(0);
				setState(132);
				match(RPAREN);
				}
				break;
			case 3:
				{
				setState(134);
				unaryOp();
				setState(135);
				exp(3);
				}
				break;
			case 4:
				{
				setState(137);
				primExp();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(146);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
